--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -5,6 +5,7 @@ worker_processes  1;
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
+error_log  /var/log/nginx/error.log;
 
 #pid        logs/nginx.pid;
 
@@ -27,7 +28,7 @@ http {
     #                  '$status $body_bytes_sent "$http_referer" '
     #                  '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    #access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
     #tcp_nopush     on;
